Error handling, fix timezone

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 		"@supabase/supabase-js": "^2.42.7",
 		"@sveltejs/adapter-node": "^5.0.1",
 		"axios": "^1.6.8",
-		"dotenv": "^16.4.5"
+		"dotenv": "^16.4.5",
+		"moment-timezone": "^0.5.45"
 	}
 }
